Revert "Hide Sandbox tab if using external ATIS generator (#231)"
This reverts commit ae511da99e591ccb2a27ae6773a525b05a19fc18.

--- a/vATIS.Desktop/Ui/Windows/AtisConfigurationWindow.axaml
+++ b/vATIS.Desktop/Ui/Windows/AtisConfigurationWindow.axaml
@@ -100,7 +100,7 @@
 						<TabItem Header="Contractions">
 							<views:ContractionsView DataContext="{Binding ContractionsViewModel, DataType=vm:AtisConfigurationWindowViewModel}"/>
 						</TabItem>
-						<TabItem Header="Sandbox" Name="SandboxTab" IsVisible="False">
+						<TabItem Header="Sandbox">
 							<views:SandboxView DataContext="{Binding SandboxViewModel, DataType=vm:AtisConfigurationWindowViewModel}"/>
 						</TabItem>
 					</TabControl>
