Keep context menu open when menuitem is clicked

--- a/vATIS.Desktop/Ui/Styles/MiniWindowMenu.axaml
+++ b/vATIS.Desktop/Ui/Styles/MiniWindowMenu.axaml
@@ -108,6 +108,7 @@
 
     <ControlTheme x:Key="MiniWindow_MenuItem" TargetType="MenuItem">
         <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="StaysOpenOnClick" Value="True"/>
         <Setter Property="Template">
             <ControlTemplate>
                 <Panel>
